components/menu/src/styles/default/color-menuoption.scss
// Copyright (c) 2021 Alaska Airlines. All right reserved. Licensed under the Apache-2.0 license
// See LICENSE in the project root for license information.

// ---------------------------------------------------------------------

/* stylelint-disable custom-property-empty-line-before, declaration-no-important */

@use "@aurodesignsystem/design-tokens/dist/themes/alaska/SCSSVariables--alaska" as v;

:host {
  .wrapper {
    background-color: var(--ds-auro-menuoption-container-color);
    color: var(--ds-auro-menuoption-text-color);
    outline: 1px solid var(--ds-auro-menuoption-container-border-color);
  }

  svg {
    fill: var(--ds-auro-menuoption-icon-color);
  }
}

:host([disabled]) {
  --ds-auro-menuoption-text-color: var(--ds-basic-color-texticon-disabled, #{v.$ds-basic-color-texticon-disabled});
}

:host(:hover),
:host(.active) {
  --ds-auro-menuoption-container-color: var(--ds-basic-color-surface-neutral-subtle, #{v.$ds-basic-color-surface-neutral-subtle});
}

:host([selected]) {
  --ds-auro-menuoption-container-color: var(--ds-advanced-color-state-selected, #{v.$ds-advanced-color-state-selected});
  --ds-auro-menuoption-text-color: var(--ds-basic-color-texticon-inverse, #{v.$ds-basic-color-texticon-inverse});
  --ds-auro-menuoption-icon-color: var(--ds-basic-color-texticon-inverse, #{v.$ds-basic-color-texticon-inverse});

  &:host(:hover),
  &:host(.active) {
    --ds-auro-menuoption-container-color: var(--ds-advanced-color-state-selected-hover, #{v.$ds-advanced-color-state-selected-hover});
  }
}

